src/test/deca/context/invalid/created/SansObjet/InvalidTypeNot.deca
// Description:
//    Teste l'opérateur '!' avec un type incompatible
// Resultats:
//   InvalidTypeNot.deca:9:8: Error: Incompatible type for operator '!' and type 'int'


{
    int a = 3;
    if (!a){
        print("ERRONE");
    }
    print("ok");
}